osso-af-startup (1.16-1) unstable; urgency=low

  * UNRELEASED
  * Media server is now also restarted in USER state in the first boot
    (N#28935).

 -- Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>  Tue, 09 May 2006 17:49:16 +0300

osso-af-startup (1.15-1) unstable; urgency=low

  * Added support for another memory card.
  * Added MMC_SWAP_FILE_LOCATION and INTERNAL_MMC_SWAP_FILE_LOCATION
    variables.

 -- Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>  Sat, 06 May 2006 22:17:08 +0300

osso-af-startup (1.14-1) unstable; urgency=low

  * Modified DBus session bus startup script for static address (N#24573).
  * Starting media server on background (N#26104).
  * Depending on new static-addressed DBus version.
  * Fixed debian/control to UTF-8.
  * Increased the sleep after maemo-af-desktop.

 -- Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>  Thu, 20 Apr 2006 13:44:24 +0300

osso-af-startup (1.13-1) unstable; urgency=low

  * Fixed problem with get-devlock.sh (N#22474).
  * Fixed possible problem with querying bootstate.

 -- Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>  Mon, 27 Mar 2006 11:14:01 +0300

osso-af-startup (1.12-1) unstable; urgency=low

  * Removed ndm dependency and changes.
  * Corrected dependency dbus-1-utils to dbus, because dbus-send is now
    installed by the dbus package.

 -- Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>  Tue, 21 Mar 2006 11:46:36 +0200

osso-af-startup (1.11-1) unstable; urgency=low

  * Added OSSO_SWAP definition to af-defines.sh.
  * Now restarting ke-recv in first boot (N#23857).
  * Added swappiness adjustment to af-services (N#24168).

 -- Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>  Tue, 14 Mar 2006 14:24:04 +0200

osso-af-startup (1.10-1) unstable; urgency=low

  * Using ndm instead of init to start the AF scripts.

 -- Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>  Mon, 13 Mar 2006 17:53:25 +0200

osso-af-startup (1.9-1) unstable; urgency=low

  * Changed the uname check to be '^armv' because of SB/ARM.
