@@ -18,6 +18,7 @@
 # USA
 
 CONNECTIVITY_UI_SCRIPT=/usr/bin/osso-connectivity-ui.sh
+CONNECTIVITY_UI_SCRIPT2=$AF_INIT_DIR/osso-connectivity-ui.sh
 case "$1" in
 start)
 
@@ -29,6 +30,9 @@ start)
 
   if [ -x $CONNECTIVITY_UI_SCRIPT ]; then
     source $CONNECTIVITY_UI_SCRIPT start
+  fi
+  if [ -x $CONNECTIVITY_UI_SCRIPT2 ]; then
+    source $CONNECTIVITY_UI_SCRIPT2 start
   fi
 
   source $AF_INIT_DIR/keyboard.sh start
@@ -47,6 +51,9 @@ stop)
 
   if [ -x $CONNECTIVITY_UI_SCRIPT ]; then
     source $CONNECTIVITY_UI_SCRIPT stop
+  fi
+  if [ -x $CONNECTIVITY_UI_SCRIPT2 ]; then
+    source $CONNECTIVITY_UI_SCRIPT2 stop
   fi
 
   source $AF_INIT_DIR/maemo-af-desktop.sh stop
